# BetterReplays

./: CMakeLists.txt  README.md  main.cpp
app/: better_replays.cpp  better_replays.hpp  settings.cpp  settings.hpp
buffer/: buffer.cpp  buffer.hpp
capture/: linux_screen_capture.cpp  linux_screen_capture.hpp  mac_screen_capture.cpp  mac_screen_capture.hpp  screen_capture.cpp  screen_capture.hpp  windows_screen_capture.hpp
display/: display_config.hpp  display_recorder.hpp
encoder/: encoder.cpp  encoder.hpp  ffmpeg_encoder.cpp  ffmpeg_encoder.hpp
hotkey/: hotkey.cpp  hotkey.hpp  linux_hotkey.cpp  linux_hotkey.hpp
muxer/: ffmpeg_muxer.cpp  ffmpeg_muxer.hpp  muxer.cpp  muxer.hpp
pipewire/: format.hpp  instance.hpp  stream.hpp
structs/: codec_parameters.hpp  crop.hpp  cursor.hpp  encoded_packet.hpp  frame.hpp  framerate.hpp  pixel_format.hpp  resolution.hpp
utils/: config.cpp  config.hpp  file.cpp  file.hpp  input.hpp  logger.cpp  logger.hpp  portal.cpp  portal.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
